Login/Logout implemented, mock up layouts ready

--- a/CAPSTONE_TEAM01_2024/appsettings.json
+++ b/CAPSTONE_TEAM01_2024/appsettings.json
@@ -1,4 +1,9 @@
 {
+  "MicrosoftClientID": "c990446b-3af8-466e-8a94-673d9575203a",
+  "MicrosoftSecretID": "kMe8Q~YPZXvSt7CuQ6fWO3Sm8N1rc6rag_ShDavu",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=tuleap.vanlanguni.edu.vn,18082; Database=CAP24Team01;User Id=CAP24Team01;password=CAP24Team01;TrustServerCertificate=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
