--- a/CAPSTONE_TEAM01_2024/CAPSTONE_TEAM01_2024.csproj
+++ b/CAPSTONE_TEAM01_2024/CAPSTONE_TEAM01_2024.csproj
@@ -24,4 +24,8 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.17" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="ViewModels\" />
+  </ItemGroup>
+
 </Project>
