--- a/CAPSTONE_TEAM01_2024/appsettings.json
+++ b/CAPSTONE_TEAM01_2024/appsettings.json
@@ -10,5 +10,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "EPPlus": {
+    "ExcelPackage": {
+      "LicenseContext": "NonCommercial" // or "Commercial" depending on your usage
+    }
+  }
 }
