--- a/CAPSTONE_TEAM01_2024/CAPSTONE_TEAM01_2024.csproj
+++ b/CAPSTONE_TEAM01_2024/CAPSTONE_TEAM01_2024.csproj
@@ -23,6 +23,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.17" />
+    <PackageReference Include="SixLabors.ImageSharp" Version="3.1.5" />
   </ItemGroup>
 
 </Project>
