Update tittle Kế Hoạch Và Báo Cáo

--- a/CAPSTONE_TEAM01_2024/appsettings.json
+++ b/CAPSTONE_TEAM01_2024/appsettings.json
@@ -13,7 +13,7 @@
   "AllowedHosts": "*",
   "EPPlus": {
     "ExcelPackage": {
-      "LicenseContext": "NonCommercial" // or "Commercial" depending on your usage
+      "LicenseContext": "NonCommercial" 
     }
   }
 }
